// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormView <FormView /> renders 1`] = `
<DocumentFragment>
  <form
    id="form"
  >
    <div />
  </form>
</DocumentFragment>
`;

exports[`FormView renders example 1 1`] = `
<DocumentFragment>
  <form
    id="formViewStore.formView1"
  >
    <div
      style="border: 1px solid purple; padding: 16px;"
    >
      <h2>
        FormViewBox
      </h2>
      <div
        style="border: 1px solid blue; margin: 16px; padding: 16px;"
      >
        <h2>
          SectionBox: Section 1
        </h2>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore.formView1.abc"
                    >
                      ABC
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore.formView1.abc"
                      name="formViewStore.formView1.abc"
                      value="123"
                    />
                  </div>
                  <div>
                    ABC tooltip
                  </div>
                  <br />
                </div>
              </div>
            </div>
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore.formView1.def"
                    >
                      def
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore.formView1.def"
                      name="formViewStore.formView1.def"
                      value="345"
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="border: 1px solid blue; margin: 16px; padding: 16px;"
      >
        <h2>
          SectionBox: Section 2
        </h2>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore.formView1.ghi"
                    >
                      ghi
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore.formView1.ghi"
                      name="formViewStore.formView1.ghi"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore.formView1.jkl"
                    >
                      jkl
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore.formView1.jkl"
                      name="formViewStore.formView1.jkl"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`FormView renders example 2 1`] = `
<DocumentFragment>
  <form
    id="formViewStore2.formView2"
  >
    <div
      style="border: 1px solid purple; padding: 16px;"
    >
      <h2>
        FormViewBox
      </h2>
      <div
        style="border: 1px solid blue; margin: 16px; padding: 16px;"
      >
        <h2>
          SectionBox
        </h2>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore2.formView2.abc"
                    >
                      ABC
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore2.formView2.abc"
                      name="formViewStore2.formView2.abc"
                      value="123"
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore2.formView2.def"
                    >
                      def
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore2.formView2.def"
                      name="formViewStore2.formView2.def"
                      value="345"
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="border: 1px solid blue; margin: 16px; padding: 16px;"
      >
        <h2>
          SectionBox
        </h2>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore2.formView2.ghi"
                    >
                      ghi
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore2.formView2.ghi"
                      name="formViewStore2.formView2.ghi"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStore2.formView2.jkl"
                    >
                      jkl
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStore2.formView2.jkl"
                      name="formViewStore2.formView2.jkl"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`FormView renders example 3 1`] = `
<DocumentFragment>
  <form
    id="formViewStoreComposing.formViewComposing"
  >
    <div
      style="border: 1px solid purple; padding: 16px;"
    >
      <h2>
        FormViewBox
      </h2>
      <div
        style="border: 1px solid blue; margin: 16px; padding: 16px;"
      >
        <h2>
          SectionBox: Section 1
        </h2>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStoreComposing.formViewComposing.abc"
                    >
                      ABC
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStoreComposing.formViewComposing.abc"
                      name="formViewStoreComposing.formViewComposing.abc"
                      value="abc"
                    />
                  </div>
                  The ABC Tooltip
                  <br />
                </div>
              </div>
            </div>
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStoreComposing.formViewComposing.def"
                    >
                      def
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStoreComposing.formViewComposing.def"
                      name="formViewStoreComposing.formViewComposing.def"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="border: 1px solid blue; margin: 16px; padding: 16px;"
      >
        <h2>
          SectionBox: Section 2
        </h2>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStoreComposing.formViewComposing.ghi"
                    >
                      ghi
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStoreComposing.formViewComposing.ghi"
                      name="formViewStoreComposing.formViewComposing.ghi"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="border: 1px solid red; margin: 16px; padding: 16px;"
        >
          <div>
            <h2>
              View
            </h2>
          </div>
          <div
            style="display: flex;"
          >
            <div
              style="border: 1px solid white; margin: 16px; padding: 16px;"
            >
              <div>
                <h2>
                  ViewItem
                </h2>
              </div>
              <div
                margin="16px"
                padding="16px"
                style="display: block;"
              >
                <div>
                  <div>
                    <label
                      for="formViewStoreComposing.formViewComposing.jkl"
                    >
                      jkl
                    </label>
                  </div>
                  <div>
                    <input
                      id="formViewStoreComposing.formViewComposing.jkl"
                      name="formViewStoreComposing.formViewComposing.jkl"
                      value=""
                    />
                  </div>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
